--- a/Assets/com.gamelokal.gamepangin/package.json
+++ b/Assets/com.gamelokal.gamepangin/package.json
@@ -1,11 +1,11 @@
 {
   "name": "com.gamelokal.gamepangin",
   "displayName": "Gamepangin",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "unity": "2021.3",
   "description": "Bikin game? Ya Gamepangin aja! Solusi bikin game jadi gampang!",
-  "documentationUrl": "https://gamelokal.notion.site/Gamepangin-f2963499d0dd4caeaf90ea724b3cd89e",
-  "changelogUrl": "https://www.notion.so/gamelokal/Changelog-2e1fa076300c4f44a23db174e47d898b",
+  "documentationUrl": "https://gamepangin.gamelokal.com/",
+  "changelogUrl": "https://gamepangin.gamelokal.com/gamepangin/changelog",
   "keywords": [
         "pattern",
         "utility",
