--- a/Assets/com.gamelokal.gamepangin/Editor/Gamepangin.Editor.asmdef
+++ b/Assets/com.gamelokal.gamepangin/Editor/Gamepangin.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "Gamepangin.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:dd9450ac2c8fcb94ab184bd0f973e277"
+        "GUID:dd9450ac2c8fcb94ab184bd0f973e277",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [
         "Editor"
