--- a/Assets/com.gamelokal.gamepangin/package.json
+++ b/Assets/com.gamelokal.gamepangin/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "com.gamelokal.gamepangin",
-  "displayName": "Gamepangin",
-  "version": "2.0.6",
+  "name": "com.gamepangin.utoolkit",
+  "displayName": "Gamepangin Unity Toolkit",
+  "version": "0.5.0",
   "unity": "2022.3",
   "description": "Game development made easy!",
-  "documentationUrl": "https://gamepangin.gamelokal.com/",
-  "changelogUrl": "https://gamepangin.gamelokal.com/gamepangin/changelog",
+  "documentationUrl": "https://utoolkit.gamepangin.com/",
+  "changelogUrl": "https://utoolkit.gamepangin.com/changelog",
   "keywords": [
         "pattern",
         "utility",
@@ -22,17 +22,17 @@
     {
       "displayName": "Menu Manager Example",
       "description": "Example usage of menu manager",
-      "path": "Samples~/Menu Manager"
+      "path": "Samples/Menu Manager"
     },
     {
       "displayName": "Audio Manager Example",
       "description": "Example usage of audio manager",
-      "path": "Samples~/Audio Manager"
+      "path": "Samples/Audio Manager"
     },
     {
       "displayName": "Item Management Example",
       "description": "Example usage of item management",
-      "path": "Samples~/Item Management"
+      "path": "Samples/Item Management"
     }
   ]
 }
